tests/baselines/reference/YieldExpression11_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts(2,3): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression11_es6.ts (1 errors) ====
    class C {
      *foo() {
      ~
!!! error TS9001: 'generators' are not currently supported.
        yield(foo);
      }
    }